# uipath-skills

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LOOP.md  README.md  TELEMETRY.md  package.json  version-manifest.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: audit-verbs.md  generate-confluence-scorecard.md  generate-task.md  lint-task.md  skill-pr-audit.md  test-coverage.md
.claude/rules/: cli-renames.md  pr-review.md  skill-review.md  skill-structure.md  task-authoring.md  test-writing.md
.codex-plugin/: plugin.json
.github/docker/: Dockerfile.smoke
.github/workflows/: cherry-pick.yml  (+18 more)
agents/: uipath-project-discovery-agent.md
assets/: cli-versions.json  skill-status.json  uip-catalog-snapshot.json
docs/: RELEASE.md  dashboard-bug-bash-scenarios.md  dashboard-metrics-catalog.md  maestro-bpmn-coding-agent-charter.md  maestro-bpmn-frontend-xml-contract.md
hooks/: ensure-uip.sh  hooks.json  send-telemetry.ps1  send-telemetry.sh  set-session-env.ps1  set-session-env.sh  suggest-permissions.ps1  suggest-permissions.sh
scripts/: build-uip-catalog.py  check-cli-verbs.py  check-cross-skill-links.py  check-skill-status.py  check-skill-verbs.py  compare-plugin-cache.py  prune-task-defaults.py  sync-version.mjs
tests/: Makefile  README.md
tests/tasks/uipath-agents/coded/eval_llm_judges/_fixtures/intent-classifier/: agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml
tests/tasks/uipath-agents/coded/guardrails/_fixtures/SimpleCodedAgent/: graph.py  pyproject.toml
(+5869 files in other folders)
